[package]
name = "ergvein-filters"
version = "0.1.0"
authors = ["Anton Gushcha <ncrashed@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin =  { version = "^0.26", features = [ "rand" ] }
bitcoin_hashes = "^0.9"
[dependencies.ergotree-ir]
git = "https://github.com/hexresearch/sigma-rust.git"
rev = "1a69a89a0b00eb9b58ab87ef6b95e5607e1a1e1f"
[dependencies.sigma-ser]
git = "https://github.com/hexresearch/sigma-rust.git"
rev = "1a69a89a0b00eb9b58ab87ef6b95e5607e1a1e1f"
[dependencies.ergo-lib]
git = "https://github.com/hexresearch/sigma-rust.git"
rev = "1a69a89a0b00eb9b58ab87ef6b95e5607e1a1e1f"
